force-app/main/default/objects/Tareas_de_profesionales__c/Tareas_de_profesionales__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Para creación de tareas automáticas (TaskGenerator)</description>
    <label>Tareas de profesionales</label>
</CustomObject>