force-app/main/default/objects/Tareas_de_profesionales__c/fields/Asunto_de_la_visita__c.field-meta.xml
<CustomField>
    <fullName>Asunto_de_la_visita__c</fullName>
    <label>Asunto de la visita</label>
    <length>80</length>
    <type>Text</type>
</CustomField>