force-app/main/default/objects/Tareas_de_profesionales__c/fields/Tareas_del_profesional__c.field-meta.xml
<CustomField>
    <fullName>Tareas_del_profesional__c</fullName>
    <label>Tareas del profesional</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>