force-app/main/default/objects/Tareas_de_profesionales__c/fields/Titulo_del_profesional__c.field-meta.xml
<CustomField>
    <fullName>Titulo_del_profesional__c</fullName>
    <label>Titulo del profesional</label>
    <length>50</length>
    <type>Text</type>
</CustomField>